fix : 금칙어 테ìcheck를 interceptor에서 service로 이전